banner sec done

--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- fav -->
+    <link rel="shortcut icon" href="./images/icons/web.png" type="image/x-icon">
+    <!-- css -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Shrabony Akter</title>
 </head>
 <body>
+
+    <!-- Header section -->
+
     <header>
-        
+        <section class="banner-container">
+            <div class="banner-iteam">
+                <div class="banner-desk">
+                    <h2>All Thinks Are Possible If You believe</h2>
+                    <p class="b-pera">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    </p>
+                    <button class="btn-primary">Contact Us</button>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 </html>
