failure sec done

--- a/index.html
+++ b/index.html
@@ -30,5 +30,33 @@
             </div>
         </section>
     </header>
+
+    <!-- main sec -->
+
+    <main>
+        <section class="failure">
+            <div class="failure-container">
+                <div class="f-img">
+                    <div class="f-img-cont">
+                        <img src="./images/smrity.png" alt="">
+                    </div>
+                </div>
+
+                <div class="description">
+                    <h4>My failures of previous year</h4>
+                    <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                    </p>
+                    <ol>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
