--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- plan sec -->
+
+        <section class="my-plan">
+            <h4>My Plan</h4>
+            <div class="my-plan-cont">
+                <div class="plan-itm">
+                    <img src="./images/icons/web.png" alt="">
+                    <h5>Web Development</h5>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan-itm">
+                    <img src="./images/icons/js.png" alt="">
+                    <h5>JavaScript</h5>
+                    <p>I want to learn</p>
+                </div>
+                <div class="plan-itm">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h5>ecommerce</h5>
+                    <p>I want to develop</p>
+                </div>
+                <div class="plan-itm">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h5>Smoking Habit</h5>
+                    <p>I want to end</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
