positive sec done with normal style

--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- positive section -->
+
+        <section class="positive">
+            <div class="positive-cont">
+                <img src="./images/watch.png" alt="">
+                <img class="grad" src="./images/gradient2.png" alt="">
+                <div class="pos-desk">
+                    <h4>Awlays keep a positive mindset</h4>
+                    <button class="btn-primary" id="btn">Call Now</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
