--- a/index.html
+++ b/index.html
@@ -99,5 +99,30 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer area -->
+
+    <footer>
+        <section class="footer-container">
+            <div class="footer-iteam">
+                <h4>Future</h4>
+                <p class="peragraph">
+                    There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words
+                </p>
+                <p class="pera">
+                    Email : info@gmail.com
+                </p>
+                <p class="pera">
+                    Phone : 01500 00 00 00
+                </p>
+                <img src="./images/icons/fb.png" alt=""><img src="./images/icons/twitter.png" alt=""><img src="./images/icons/youtube.png" alt="">
+            </div>
+            <div class="footer-iteam">
+                <h6>Subscribe</h6>
+                <input type="text" class="email" placeholder="Enter Your E-mail">
+                <button class="btn-primary" id="btn">Subscribe</button>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
