--- a/index.html
+++ b/index.html
@@ -18,14 +18,26 @@
     <!-- Header section -->
 
     <header>
+        <!-- Nav menu -->
+
+        <nav class="navbar">
+            <a href="index.html"><h1 class="logo">Shra<span>b</span>ony</h1></a>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+
+        <!-- Banner section -->
         <section class="banner-container">
-            <div class="banner-iteam">
-                <div class="banner-desk">
-                    <h2>All Thinks Are Possible If You believe</h2>
-                    <p class="b-pera">
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
-                    </p>
-                    <button class="btn-primary">Contact Us</button>
+            <div class="col-1">
+                <div class="banner-iteam">
+                    <div class="banner-desk">
+                        <h2>All Thinks Are Possible If You believe</h2>
+                        <p class="b-pera">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                        </p>
+                        <button class="btn-primary">Contact Us</button>
+                    </div>
                 </div>
             </div>
         </section>
